-- Migration: align database with db/schema.dbml
-- Integer IDs, audit timestamps, optional datasheets.model_card_id, no deployments.
-- WARNING: Drops and recreates tables. Run only on a DB you can reset or backup first.
--
-- Usage: psql -d your_database -f db/migrate_to_integer_ids.sql
-- Then:  DATABASE_URL="postgresql://…" python3 db/seed_production_like.py

BEGIN;

DROP TABLE IF EXISTS experiment_images CASCADE;
DROP TABLE IF EXISTS experiments CASCADE;
DROP TABLE IF EXISTS raw_images CASCADE;
DROP TABLE IF EXISTS datasheet_funding_references CASCADE;
DROP TABLE IF EXISTS datasheet_geo_locations CASCADE;
DROP TABLE IF EXISTS datasheet_descriptions CASCADE;
DROP TABLE IF EXISTS datasheet_rights CASCADE;
DROP TABLE IF EXISTS datasheet_related_identifiers CASCADE;
DROP TABLE IF EXISTS datasheet_alternate_identifiers CASCADE;
DROP TABLE IF EXISTS datasheet_dates CASCADE;
DROP TABLE IF EXISTS datasheet_contributors CASCADE;
DROP TABLE IF EXISTS datasheet_subjects CASCADE;
DROP TABLE IF EXISTS datasheet_titles CASCADE;
DROP TABLE IF EXISTS datasheet_creators CASCADE;
DROP TABLE IF EXISTS datasheets CASCADE;
DROP TABLE IF EXISTS models CASCADE;
DROP TABLE IF EXISTS publishers CASCADE;
DROP TABLE IF EXISTS model_cards CASCADE;
DROP TABLE IF EXISTS dataset_schemas CASCADE;
DROP TABLE IF EXISTS edge_devices CASCADE;
DROP TABLE IF EXISTS users CASCADE;
DROP TABLE IF EXISTS deployments CASCADE;
DROP TYPE IF EXISTS approval_status CASCADE;

CREATE TYPE approval_status AS ENUM ('pending', 'approved', 'rejected');

CREATE TABLE users (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE edge_devices (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE dataset_schemas (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  blob jsonb NOT NULL,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE model_cards (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  is_private boolean NOT NULL DEFAULT false,
  is_gated boolean NOT NULL DEFAULT false,
  status approval_status NOT NULL DEFAULT 'pending',
  short_description text,
  full_description text,
  keywords text,
  author text,
  citation text,
  input_data text,
  input_type text,
  output_data text,
  foundational_model text,
  category text,
  documentation text,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE publishers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  publisher_identifier text,
  publisher_identifier_scheme text,
  scheme_uri text,
  lang text
);

CREATE TABLE datasheets (
  identifier bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  publication_year integer,
  resource_type text,
  resource_type_general text,
  size text,
  format text,
  version text,
  is_private boolean NOT NULL DEFAULT false,
  status approval_status NOT NULL DEFAULT 'pending',
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  dataset_schema_id bigint REFERENCES dataset_schemas(id),
  publisher_id bigint REFERENCES publishers(id)
);
CREATE INDEX ON datasheets (dataset_schema_id);
CREATE INDEX ON datasheets (status);
CREATE INDEX ON datasheets (publisher_id);

CREATE TABLE datasheet_creators (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  creator_name text NOT NULL,
  name_type text,
  lang text,
  given_name text,
  family_name text,
  name_identifier text,
  name_identifier_scheme text,
  name_id_scheme_uri text,
  affiliation text,
  affiliation_identifier text,
  affiliation_identifier_scheme text,
  affiliation_scheme_uri text
);
CREATE INDEX ON datasheet_creators (datasheet_id);

CREATE TABLE datasheet_titles (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  title text NOT NULL,
  title_type text,
  lang text
);
CREATE INDEX ON datasheet_titles (datasheet_id);

CREATE TABLE datasheet_subjects (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  subject text NOT NULL,
  subject_scheme text,
  scheme_uri text,
  value_uri text,
  classification_code text,
  lang text
);
CREATE INDEX ON datasheet_subjects (datasheet_id);

CREATE TABLE datasheet_contributors (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  contributor_type text NOT NULL,
  contributor_name text NOT NULL,
  name_type text,
  given_name text,
  family_name text,
  name_identifier text,
  name_identifier_scheme text,
  name_id_scheme_uri text,
  affiliation text,
  affiliation_identifier text,
  affiliation_identifier_scheme text,
  affiliation_scheme_uri text
);
CREATE INDEX ON datasheet_contributors (datasheet_id);

CREATE TABLE datasheet_dates (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  date text NOT NULL,
  date_type text NOT NULL,
  date_information text
);
CREATE INDEX ON datasheet_dates (datasheet_id);

CREATE TABLE datasheet_alternate_identifiers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  alternate_identifier text NOT NULL,
  alternate_identifier_type text NOT NULL
);
CREATE INDEX ON datasheet_alternate_identifiers (datasheet_id);

CREATE TABLE datasheet_related_identifiers (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  related_identifier text NOT NULL,
  related_identifier_type text NOT NULL,
  relation_type text NOT NULL,
  related_metadata_scheme text,
  scheme_uri text,
  scheme_type text,
  resource_type_general text
);
CREATE INDEX ON datasheet_related_identifiers (datasheet_id);

CREATE TABLE datasheet_rights (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  rights text,
  rights_uri text,
  rights_identifier text,
  rights_identifier_scheme text,
  scheme_uri text,
  lang text
);
CREATE INDEX ON datasheet_rights (datasheet_id);

CREATE TABLE datasheet_descriptions (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  description text NOT NULL,
  description_type text NOT NULL,
  lang text
);
CREATE INDEX ON datasheet_descriptions (datasheet_id);

CREATE TABLE datasheet_geo_locations (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  geo_location_place text,
  point_longitude numeric,
  point_latitude numeric,
  box_west numeric,
  box_east numeric,
  box_south numeric,
  box_north numeric,
  polygon jsonb
);
CREATE INDEX ON datasheet_geo_locations (datasheet_id);

CREATE TABLE datasheet_funding_references (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  datasheet_id bigint NOT NULL REFERENCES datasheets(identifier) ON DELETE CASCADE,
  funder_name text NOT NULL,
  funder_identifier text,
  funder_identifier_type text,
  scheme_uri text,
  award_number text,
  award_uri text,
  award_title text
);
CREATE INDEX ON datasheet_funding_references (datasheet_id);

CREATE TABLE models (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  description text,
  owner text,
  location text,
  license text,
  framework text,
  model_type text,
  test_accuracy numeric(6,5),
  model_metrics jsonb,
  inference_labels jsonb,
  model_structure jsonb,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  model_card_id bigint NOT NULL UNIQUE REFERENCES model_cards(id)
);
CREATE INDEX ON models (model_card_id);

CREATE TABLE experiments (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  start_at timestamptz NOT NULL,
  submitted_at timestamptz,
  executed_at timestamptz,
  model_used_at timestamptz,
  total_images integer,
  total_predictions integer,
  total_ground_truth_objects integer,
  true_positives integer,
  false_positives integer,
  false_negatives integer,
  precision numeric(6,5),
  recall numeric(6,5),
  f1_score numeric(6,5),
  mean_iou numeric(6,5),
  map_50 numeric(6,5),
  map_50_95 numeric(6,5),
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  user_id bigint NOT NULL REFERENCES users(id),
  edge_device_id bigint NOT NULL REFERENCES edge_devices(id),
  model_id bigint NOT NULL REFERENCES models(id)
);
CREATE INDEX ON experiments (user_id);
CREATE INDEX ON experiments (edge_device_id);
CREATE INDEX ON experiments (model_id);
CREATE INDEX ON experiments (start_at);

CREATE TABLE raw_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  image_name text NOT NULL,
  ground_truth jsonb,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE experiment_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  experiment_id bigint NOT NULL REFERENCES experiments(id),
  raw_image_id bigint NOT NULL REFERENCES raw_images(id),
  image_count integer,
  image_received_at timestamptz,
  image_scored_at timestamptz,
  image_store_deleted_at timestamptz,
  image_decision text,
  top_label text,
  top_probability numeric(8,7),
  ingested_at timestamptz NOT NULL,
  scores jsonb,
  UNIQUE (experiment_id, raw_image_id)
);
CREATE INDEX ON experiment_images (experiment_id);
CREATE INDEX ON experiment_images (raw_image_id);
CREATE INDEX ON experiment_images (image_received_at);
CREATE INDEX ON experiment_images (ingested_at);

COMMIT;
